--- a/app/src/main/res/layout/fragment_submit_player_info.xml
+++ b/app/src/main/res/layout/fragment_submit_player_info.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainFragment">
+    tools:context=".SubmitPlayerInfoFragment">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="180dp"
-        android:text="Enter your Budget: $"
+        android:layout_marginTop="172dp"
+        android:text="Enter your Player ID:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,8 +24,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/aldrich"
         android:padding="5dp"
-        android:text="Custom PC Build Helper"
-        android:textSize="64sp"
+        android:text="Clash Royale Stats"
+        android:textSize="62sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,22 +41,12 @@
         app:layout_constraintTop_toBottomOf="@+id/Title" />
 
     <Button
-        android:id="@+id/advancedSettingsButton"
-        android:layout_width="120dp"
-        android:layout_height="76dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="35dp"
-        android:text="Advanced Settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
         android:id="@+id/submitButton"
         android:layout_width="120dp"
         android:layout_height="76dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="144dp"
         android:layout_marginBottom="35dp"
-        android:text="Submit"
+        android:text="See Stats!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
