--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,20 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/startFragment">
 
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.example.androidfinalproject.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_finalFragment"
-            app:destination="@id/finalFragment" />
-    </fragment>
     <fragment
         android:id="@+id/finalFragment"
         android:name="com.example.androidfinalproject.FinalFragment"
         android:label="fragment_final"
         tools:layout="@layout/fragment_final" />
+    <fragment
+        android:id="@+id/submitClanInfoFragment"
+        android:name="com.example.androidfinalproject.SubmitClanInfoFragment"
+        android:label="SubmitClanInfoFragment" >
+        <action
+            android:id="@+id/action_submitClanInfoFragment_to_finalFragment"
+            app:destination="@id/finalFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/startFragment"
+        android:name="com.example.androidfinalproject.StartFragment"
+        android:label="StartFragment" >
+        <action
+            android:id="@+id/action_startFragment_to_submitPlayerInfoFragment"
+            app:destination="@id/submitPlayerInfoFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_submitClanInfoFragment"
+            app:destination="@id/submitClanInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/submitPlayerInfoFragment"
+        android:name="com.example.androidfinalproject.SubmitPlayerInfoFragment"
+        android:label="fragment_submit_clan_info"
+        tools:layout="@layout/fragment_submit_clan_info" >
+        <action
+            android:id="@+id/action_submitPlayerInfoFragment_to_finalFragment"
+            app:destination="@id/finalFragment" />
+    </fragment>
 </navigation>
