--- a/app/src/main/res/layout/fragment_submit_player_info.xml
+++ b/app/src/main/res/layout/fragment_submit_player_info.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title" />
 
