--- a/app/src/main/res/layout/fragment_submit_player_info.xml
+++ b/app/src/main/res/layout/fragment_submit_player_info.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber2"
+        android:id="@+id/enterPlayerID"
         android:layout_width="175dp"
         android:layout_height="53dp"
         android:layout_marginTop="4dp"
